# invest

./: .env  .env.example  .gitignore  CHANGELOG.md  DEVELOPELOG.md  MUNGER_GUIDE.md  PRD.md  README.md  ROUND_TABLE_PROMPT.md  architecture_diagram.md  config.yaml  evaluate_output.txt  predict.py  pyproject.toml  run_all_markets.py  run_daily.py  scan.py
.agents/rules/: stock.md
.agents/workflows/: stock.md
.github/workflows/: monitor.yml
autonomous_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: optimization_log.md  signal_history.csv  signal_history_backfill.csv  sol_bias.json  watchlists.json
data/backtest/: backtest_output.txt  crypto_BTC_USDT_2020_backtest.txt  crypto_ETH_USDT_2020_backtest.txt  crypto_ETH_USDT_funding_rate_backtest.txt  crypto_btc_backtest.txt  crypto_eth_backtest.txt  portfolio_backtest_output.txt
docs/: round_table_concepts.md
scripts/: auto_report.py  backtest_crypto_2020.py  backtest_eth_funding.py  candidate_screener.py  current_eth_advice.py  daily_scan.py  deep_analyze_picks.py  eval_6214_output.txt  eval_helper.py  eval_output_clean.txt  evaluate_6214.py  fetch_6214.py  last_dimension_report.txt  last_scan_report.txt  last_scan_stdout.txt  last_tw_scan_report.txt  out3.txt  report_writer.py  sol_backfill.py  test_macd_weak_signals.py  test_top_20.py  top_20_scanner.py  tw_stock_scanner.py  us_stock_scanner.py  watchlist_manager.py
src/: __init__.py  main.py
src/advisor/: __init__.py  multi_market_advisor.py  roundtable_advisor.py  roundtable_tracker.py
src/analysis/: contextual_optimizer.py  market_context.py  tw_market_context.py
src/config/: settings.py
src/data/: chip_collector.py  collector.py  funding_rate.py  indicators.py  sentiment.py  (+1 more)
(+33 files in other folders)
