[project]
name = "autonomous-trader"
version = "0.1.0"
description = "自主交易機器人 - 支援加密幣、美股、台股的智能交易系統"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # === 交易所 API ===
    "ccxt>=4.0.0",              # 加密幣交易所統一介面
    "alpaca-py>=0.30.0",        # Alpaca 美股 API
    "shioaji>=1.0.0",           # 永豐金台股 API
    "yfinance>=0.2.0",          # Yahoo Finance 歷史資料

    # === 資料處理 ===
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # pandas-ta removed: our IndicatorEngine is self-contained (no numba dependency)

    # === 設定與驗證 ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # === 資料庫 ===
    # SQLite 為 Python 內建

    # === 監控與日誌 ===
    "loguru>=0.7.0",            # 進階日誌
    "rich>=13.0.0",             # 終端美化輸出

    # === Web Dashboard ===
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",    # WebSocket 即時更新

    # === 工具 ===
    "schedule>=1.2.0",          # 定時任務
    "httpx>=0.27.0",            # HTTP 客戶端
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",  # PPO 強化學習
]

[project.scripts]
trader = "src.main:main"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
